[tool.poetry]
name = "proteinsequence"
version = "0.1.0"
description = ""
authors = ["venkat <vb19h@my.fsu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.3"
jupyter = "^1.0.0"
ipykernel = "^5.5.3"
matplotlib = "^3.4.1"
sklearn = "^0.0"
scikit-image = "^0.18.1"
toml = "^0.10.2"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchaudio = "^0.8.1"
tensorboard = "^2.4.1"
torchsummary = "^1.5.1"
scikit-metrics = "^0.1.0"
tqdm = "^4.59.0"
wget = "^3.2"
nbsphinx = "^0.8.2"
efemarai = "^1.2.0"

[[tool.poetry.source]]
name= "efemarai"
url = "https://c4a1482151e9d2d3a6f689cc2e021f2774a849fb@pypi.efemarai.com"
secondary = true

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
